--- a/style.css
+++ b/style.css
@@ -13,6 +13,24 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0 16px;
+  background-color: royalblue;
+}
+
+.nav1div {
+  display: flex;
+  color: black;
+  font-size: 32px;
+  font-weight: bold;
+  align-items: center;
+}
+
+header {
+  background-color: floralwhite;
+  height: calc(100vh - 70px);
+  padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
@@ -22,7 +40,7 @@ a {
 }
 
 .logo {
-  width: 90px;
+  width: 100px;
 }
 
 ul {
