--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 16px;
+  padding: 0 30px;
   background-color: royalblue;
 }
 
@@ -26,11 +26,15 @@ nav {
 
 header {
   background-color: floralwhite;
-  height: calc(100vh - 80px);
-  padding: 24px;
+  /*height: calc(100vh - 80px);*/
+  padding: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 a {
@@ -43,6 +47,10 @@ a {
   width: 100px;
 }
 
+.logoheader {
+  width: 375px;
+  height: 300px;
+}
 ul {
   display: flex;
 }
