--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ h2 {
   text-align: center;
 }
 
+/*
+img {
+  max-width: 100%;
+  height: auto;
+}
+*/
+
 .nav1div {
   display: flex;
   color: black;
@@ -65,6 +72,9 @@ header {
   color: black;
   font-size: 24px;
   font-weight: bold;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
 
 a {
@@ -115,7 +125,7 @@ button {
 
 @media (max-width: 720px) {
   nav {
-    height: 200px;
+    height: 160px;
     align-items: center;
     justify-content: center;
     padding: 10px 30px;
