--- a/style.css
+++ b/style.css
@@ -74,7 +74,14 @@ header {
   font-weight: bold;
   max-width: 100%;
   max-height: 100%;
-  object-fit: cover;
+  overflow: auto;
+}
+
+.divimg {
+  display: block;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 a {
