--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ img {
 }
 */
 
+a {
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+}
+
 .nav1div {
   display: flex;
   color: black;
@@ -50,6 +56,16 @@ img {
 .nav1li {
   list-style-type: none;
   padding-left: 16px;
+  margin-left: 16px;
+}
+
+.anav1li {
+  text-decoration: none;
+}
+
+#afooter {
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .logo {
@@ -57,8 +73,10 @@ img {
 }
 
 .logoheader {
-  width: 375px;
-  height: 300px;
+  /* width: 375px;
+  height: 300px; */
+  width: 100%;
+  height: 100%;
 }
 
 header {
@@ -84,12 +102,6 @@ header {
   height: auto;
   margin-left: auto;
   margin-right: auto;
-}
-
-a {
-  color: black;
-  font-size: 24px;
-  font-weight: bold;
 }
 
 form {
